       PR c++/27961        * decl.c (start_decl): Return error_mark_node if a        function is initialized like a variable.        (check_var_type): If a variable of field is declared void,        set the type to error_mark_node.        (grokdeclarator): Check the return type of check_var_type.        * class.c (finish_struct_1): Robustify.

* g++.dg/template/crash60.C: New test.
       * g++.dg/other/large-size-array.C: Adjust error markers.
       * g++.dg/parse/crash27.C: Likewise.
       * g++.dg/template/crash1.C: Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117671 138bc75d-0d04-0410-961f-82ee72b054a4