gcc/testsuite/g++.dg/other/large-size-array.C
@@ -17,7 +17,7 @@ int
 main (void)
 {
   int a[DIM][DIM];  /* { dg-error "size of array 'a' is too large" } */
-  return sub (&a[0][0]);
+  return sub (&a[0][0]);  /* { dg-error "declared" } */
 }
 
 
